--- a/tailwind.css
+++ b/tailwind.css
@@ -1,9 +1,10 @@
 @import "tailwindcss";
 
 @theme {
-	--color-primary: "#6B21A8";			/* morado profundo */
-	--color-secondary: "#E11D74";		/* magenta eléctrico */
-	--color-accent: "#00F0FF";			/* azul turquesa neón */
-	--color-backgroundDark: "#1F1B2E";	/* gris azulado oscuro */
-	--color-textLight: "#EDEDED";		/* blanco roto */
+	--color-mint-500: oklch(0.72 0.11 178);			/* testing */
+	--color-primary: oklch(0.72 0.11 178);			/* morado profundo */
+	--color-secondary: oklch(0.72 0.11 178);		/* magenta eléctrico */
+	--color-accent: oklch(0.72 0.11 178);			/* azul turquesa neón */
+	--color-backgroundDark: oklch(0.72 0.11 178);	/* gris azulado oscuro */
+	--color-textLight: oklch(0.72 0.11 178);		/* blanco roto */
 }
